# browseScene

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  browse.cpp  convert_poses.cpp  convert_poses.hpp  create_povray_script.cpp  main_add_kinect_noise.cpp  main_annotation_render.cpp  main_depth_shader.cpp  main_opengl_render_rgb_depth.cpp
src/joystick/: JoystickController.cpp  JoystickController.hpp  joystick.cpp  joystick.h
src/noise/: add_ccd_noise.cu  add_ccd_noise.h  add_kinect_noise.cu  add_kinect_noise.h  main_add_ccdnoise.cpp
src/shaders/: depth.frag  depth.vert  glsl_shader.cpp  glsl_shader.h
src/utils/: map_object_label2training_label.h  povray_utils.h
